<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ColorChooserActivity" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="#ff30c46f"
        android:clickable="true"
        android:onClick="pickColor" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="#ff008aff"
        android:clickable="true"
        android:onClick="pickColor" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="#ffff006c"
        android:clickable="true"
        android:onClick="pickColor" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="#ffff6000"
        android:clickable="true"
        android:onClick="pickColor" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="#ff7200ff"
        android:clickable="true"
        android:onClick="pickColor" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="#ffda2828"
        android:clickable="true"
        android:onClick="pickColor" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="#ff188DFB"
        android:clickable="true"
        android:onClick="pickColor" />

    <EditText
        android:id="@+id/color_chooser_entry"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:hint="@string/color_chooser_entry"
        android:inputType="textCapCharacters|textNoSuggestions"
        android:maxLength="6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="ok"
            android:text="@string/ok_button_label" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="cancel"
            android:text="@string/cancel_button_label" />
    </LinearLayout>

</LinearLayout>